# 3cx-frappe

./: LICENSE  MANIFEST.in  README.md  license.txt  pyproject.toml
frappe_3cx/: api.py  hooks.py  install.py  modules.txt  utils.py
frappe_3cx/3cx_integration/doctype/telephony_call_log/: telephony_call_log.json  telephony_call_log.py
frappe_3cx/3cx_integration/doctype/telephony_settings/: telephony_settings.json  telephony_settings.py
frappe_3cx/overrides/: contact_dashboard.py  party_dashboard.py
